--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,3 +18,9 @@ background-color: aqua;
   justify-content: center;
   width: 50px;
 }
+
+h3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
