added routing to angular project

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,23 +4,32 @@
     flex: 1 1 auto;
   }
 
-.listitem{
-display: flex;
-/* flex: 1 2 auto; */
-flex-direction: row;
-justify-content: center;
-align-items: center;
-background-color: aqua;
-  }
 
-  .example-button-container {
-  display: flex;
-  justify-content: center;
-  width: 50px;
-}
+
 
 h3{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+a{
+    text-decoration: none;
+    color: whitesmoke;
+    align-items: center;
+    text-align: center;
+    
+}
+
+p{
+    width: 80px;
+    margin-right: 10;
+    margin-left: 10;
+    display: flex;
+    padding: 10;
+}
+
+.nav{
+    display: flex;
+    flex-direction: row;
 }
